--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-h1{color:gold; font-weight:bolder; background-color:black; text-align: center;}
-h2{color:gold; font-weight:bolder; background-color:black; text-align: center;}
+h1,h2{color:goldenrod; font-weight:bolder; background-color:black; text-align: center; padding: 20px;}
 nav{font-weight: bolder; background-color:black; text-align: center; padding: 20px;}
-body{background-color: gray;}
+body{background-color:darkblue;}
 .center {display: block;margin-left: auto;margin-right: auto;}
+p{color:goldenrod;text: size adjust 40px;} 
