--- a/style.css
+++ b/style.css
@@ -2,4 +2,4 @@ h1,h2{color:goldenrod; font-weight:bolder; background-color:black; text-align: c
 nav{font-weight: bolder; background-color:black; text-align: center; padding: 20px;}
 body{background-color:darkblue;}
 .center {display: block;margin-left: auto;margin-right: auto;}
-p{color:goldenrod;font-size:40px;}
+p{color:goldenrod;}
